@@ -1,12 +1,19 @@
 {
-  "timestamp" : "2022-10-01T01:00:06Z",
+  "timestamp" : "2022-10-07T16:13:34Z",
   "count_outdated" : 66,
   "uniques_outdated" : 28,
-  "count" : 67,
-  "uniques" : 29,
+  "count" : 68,
+  "uniques" : 30,
   "views" : [
     {
       "timestamp": "2022-09-24T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-10-07T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
