@@ -1,3 +1,11 @@
+2022-10-07T16:13:34Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3206159714
+* notice: last 14d: unq all: 2 2
+* notice: prev accum: outdated-unq outdated-all / unq all: 28 66 / 29 67
+* notice: next accum: outdated-unq outdated-all / unq all: 28 66 / 30 68
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-10-07]
+
 2022-10-01T01:00:06Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3162580037
 * notice: last 14d: unq all: 1 1
